Bug #950
svcadm error message on configd bind failure is useless
Start date:
2011-04-23
Due date:
% Done:
0%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
At present, most SMF utilities give some bland and inhuman error message when they try and fail to connect to configd ("Cannot bind to svc.configd", and similar). They should at least include why they can't -- scf_strerror() and such seem like they know -- and ideally say something more useful to a casual observer (at the very least "connect" rather than "bind" would help.)
Updated by Rich Lowe over 9 years ago
- Subject changed from smf utilities need better errors when failing to connected to configd to svcadm error message on configd bind failure is useless
- Status changed from New to In Progress
Updated by Rich Lowe over 9 years ago
- Difficulty set to Medium
- Tags set to needs-triage
Resolved in r13368 commit:7a14691acba0